--- a/app.config.json
+++ b/app.config.json
@@ -12,7 +12,7 @@
   "bio": {
     "title": "Hi! My name is Jesus Graterol",
     "content": [
-      "I am a Web Developer with 10+ years of experience building scalable web applications and REST-based APIs.",
+      "I'm a Web Developer with 10+ years of experience, specializing in scalable, high-performance solutions, including web applications, RESTful APIs, and database architectures.",
       "My proficiency extends to data science, allowing me to train and serve complex machine learning models over the Internet.",
       "As a problem solver with meticulous attention to detail, I'm adept at identifying and resolving intricate challenges quickly and efficiently."
     ]
